# LoRaSim-for-Concurrent-Transmission

./: .gitignore  Cargo.toml  README.md  README_zh.md
src/data_access/: generate_packets.rs  get_packets.rs  mod.rs  setup_logger.rs
src/models/: gateway.rs  mod.rs  packet.rs
