[package]
name = "lorasim_concurrent_transmit"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
once_cell = "1.18"

[[bin]]
name = "main"